// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RealtimeVisitors when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="text--centered tablet:padding-2"
  >
    <div
      class="grid-row"
    >
      <span
        class="data text--bold text--xl grid-col-12"
      >
        10,003,538
      </span>
    </div>
    <div
      class="grid-row"
    >
      <div
        class="text--large desktop:grid-col-8 desktop:grid-offset-2"
      >
        users on Department of Defense websites and apps in the last 30 minutes
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RealtimeVisitors when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div
    class="text--centered tablet:padding-2"
  >
    <div
      class="grid-row"
    >
      <span
        class="data text--bold text--xl grid-col-12"
      >
        ...
      </span>
    </div>
    <div
      class="grid-row"
    >
      <div
        class="text--large desktop:grid-col-8 desktop:grid-offset-2"
      >
        users on Department of Defense websites and apps in the last 30 minutes
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RealtimeVisitors when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div
    class="text--centered tablet:padding-2"
  >
    <div
      class="grid-row"
    >
      <span
        class="data text--bold text--xl grid-col-12"
      >
        ...
      </span>
    </div>
    <div
      class="grid-row"
    >
      <div
        class="text--large desktop:grid-col-8 desktop:grid-offset-2"
      >
        users on Department of Defense websites and apps in the last 30 minutes
      </div>
    </div>
  </div>
</DocumentFragment>
`;
